# aind-bci-analysis

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: user-story.md
doc_template/source/: bci_analysis.io.rst  bci_analysis.pipeline.rst  bci_analysis.plot.rst  bci_analysis.rst  modules.rst
src/bci_analysis/io/: io_matlab.py  io_pybpod.py  io_python.py  io_scanimage.py  io_suite2p.py  io_utils.py
src/bci_analysis/pipeline/: pipeline_align.py  pipeline_bpod.py  pipeline_imaging.py
src/bci_analysis/plot/: plot_imaging.py
tests/: test_pipeline.py
