[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bci-analysis"
description = "Code to analyze brain computer interface data."
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'scipy',
    'pandas',
    'mat73',
    'suite2p',
    'scanimage_tiff_reader',
    'pybpod'
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'pyproject-flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo',
    'pygit2'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "bci_analysis.__version__"}
readme = {file = ["README.md"]}

[tool.black]
line-length = 79
target_version = ['py36']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["bci_analysis", "tests"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
fail_under = 100

[tool.isort]
line_length = 79
profile = "black"

[tool.flake8]
ignore = ["E203", "W503"]

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 54
